--- a/epg/assets/defaultConfig.json
+++ b/epg/assets/defaultConfig.json
@@ -23,6 +23,11 @@
     },
     "live_source_auto_sync": 0,
     "live_channel_name_process": 0,
+    "live_tvg_logo_enable": 1,
+    "live_tvg_id_enable": 1,
+    "live_tvg_name_enable": 1,
+    "live_fuzzy_match": 1,
+    "live_url_comment": 0,
     "token": "",
     "token_range": 1,
     "default_icon": "",
